@@ -557,6 +557,9 @@ pig.location.check.strict=false
 #
 hcat.bin=/usr/local/hcat/bin/hcat
 
+# Enable ATS hook to log the Pig specific ATS entry, disable only when ATS server is not deployed
+pig.ats.enabled=true
+
 ###########################################################################
 #
 # Overrides for extreme environments
